src/test/deca/context/invalid/Class_wrong8.deca
// action n'est pas un constructeur

// Date: 20.01.2022

class A{

    int e;

    void action (){
        this.e = this.e + 1;
    }
}


{
A a = new action();
println("non");
}